# transcendence

./: .gitignore  Makefile  README.md  Thbasse.md  docker-compose.ghcr.yml  docker-compose.yml  install.sh  sonar-project.properties  userStory_chat_with_friends.txt  userStory_match_queue.txt  userStory_play_against_IA.txt
.github/workflows/: ai_opponent_service_ci.yml  auth_service_ci.yml  build_docker_dev.yml  build_docker_prod.yml  chat_service_ci.yml  deploy_dev.yml  docs.yml  matchemaking_service_cli.yml  player_service_ci.yml  sonar.yml
ai_opponent/service/: ai_service.py
docs/: index.html
docs/api/: api_gateway_service.yml  auth_service.yml  chat_service.yml  chat_service_async.yml  game_service.yml  match_service.yml  player_service.yml  tournament_service.yml
docs/architectures/: global-view.md
docs/events/: game_service.yml
docs/protos/: ai_opponent_service.proto
docs/scrum/: userStory_authentication.md  userStory_chat_with_friends.md  userStory_match_queue.md  userStory_play_against_IA.md  userStory_profile_management.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  sendData.jsx
frontend/src/components/: BackButton.jsx  Footer.jsx  FormButton.jsx  InputField.jsx  NavBar.jsx  TwoFACodeInput.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Auth.jsx  Chat.jsx  ConfirmDisable2FA.jsx  ForgotPassword.jsx  Friends.jsx  Game.jsx  Home.jsx  Leaderboard.jsx  OauthSuccess.jsx  PageNotFound.jsx  PrivacyPolicy.jsx  Profile.jsx  ResetPassword.jsx  Stats.jsx  TermsOfService.jsx  TwoFACode.jsx  TwoFAQRCode.jsx
frontend/src/utils/: api.js  chatSocket.js  gameSocket.js  localGameEngine.js  matchSocket.js  validators.js
scripts/: SSL_setup.sh  setup-secrets.sh
services/ai_opponent_service/: Dockerfile  requirements.txt  server.py  test_client.py
services/auth_service/: .dockerignore  Dockerfile  index.js  mailService.js  package-lock.json  package.json  redisClient.js  server.js  service.js  validators.js
services/chat_service/: Cargo.toml  Dockerfile
services/chat_service/src/: main.rs  models.rs  player_client.rs  state.rs  utils.rs
services/chat_service/src/handlers/: messages.rs  mod.rs  ticket.rs  ws.rs
services/game_service/: .dockerignore  Dockerfile  game.html  test-client.html
services/match_service/: Cargo.toml  Dockerfile
services/match_service/src/: auth.rs  casual_queue.rs  client.rs  game_client.rs  handler.rs  lib.rs  main.rs  messages.rs  player_client.rs  ranked_queue.rs  waiting_player.rs
services/nginx/: Dockerfile
services/player_service/: Dockerfile  entrypoint.sh  openApi.json  package.json  pom.xml  service.js
services/redis/: Dockerfile
(+199 files in other folders)
