[package]
name = "chat_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
