[package]
name = "match_service"
version = "0.1.0"
edition = "2024"
default-run = "match_service"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
futures-channel = "0.3.31"
futures-util = "0.3.31"
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
uuid = "1.20.0"

[[bin]]
name = "client"
path = "src/client.rs"
