[package]
name = "match_service"
version = "0.1.0"
edition = "2024"
default-run = "match_service"

[lib]
name = "match_service"
path = "src/lib.rs"

[dependencies]
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[[bin]]
name = "client"
path = "src/client.rs"
